experimental/parser/testdata/parser/import/eof_after_kw.proto.stderr.txt
error: unexpected end-of-file in import
  --> testdata/parser/import/eof_after_kw.proto:6:7
   |
 6 | import
   |       ^

encountered 1 error
